<resources>
    <string name="app_name">uAmbition</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="open">Settings</string>
    <string name="close">Settings</string>


    <string name="name_hint">昵称</string>
    <string name="code_hint">输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="phone_hint">请输入您的手机号码</string>
    <string name="email_hint">邮箱地址,可用于找回密码</string>
    <string name="password_hint">密码</string>
    <string name="login">登录</string>
    <string name="register">一键注册</string>
    <string name="next">下一步</string>
    <string name="confirm">确认修改</string>
    <string name="new_user_name">新昵称</string>
    <string name="feedback_hint">您的宝贵建议是开发者的源动力.</string>
    <string name="commit">提交</string>
     <!--BMOB上传图片的key-->
    <string name="access_key">180a048642e1e8e0b48b9e5d2bc286cf</string>
    <string name="bmob_sdk_key">674e54574a8245c8ab232c540146c589</string>
</resources>
